--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.3.3",
     "ejs": "^1.0.0",
     "express": "^4.10.1",
+    "express-session": "^1.10.1",
     "mkdirp": "^0.5.0",
     "mongoose": "~3.8.18",
     "request": "^2.51.0",
