--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,10 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
+indent_style = space
+indent_size = 4
+charset = utf-8
+trim_trailing_whitespace = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
@@ -20,7 +24,11 @@ indent_size = 4
 indent_style = space
 indent_size = 2
 
+[*.md]
+trim_trailing_whitespace = false
+
 # Matches the exact files either package.json or .travis.yml
 [{package.json,.travis.yml,Gruntfile.js}]
 indent_style = space
 indent_size = 2
+
