--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "~3.8.18",
     "q": "^1.1.2",
     "request": "^2.51.0",
+    "socket.io": "^1.3.2",
     "tough-cookie": "^0.12.1",
     "underscore": "^1.7.0"
   }
