--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,7 @@ end_of_line = lf
 insert_final_newline = true
 indent_style = space
 indent_size = 4
+tab_width = 4
 charset = utf-8
 trim_trailing_whitespace = true
 
@@ -23,6 +24,7 @@ indent_size = 4
 [*.{json, html}]
 indent_style = space
 indent_size = 2
+tab_width = 2
 
 [*.md]
 trim_trailing_whitespace = false
@@ -31,4 +33,5 @@ trim_trailing_whitespace = false
 [{package.json,.travis.yml,Gruntfile.js}]
 indent_style = space
 indent_size = 2
+tab_width = 2
 
